--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,6 @@ body {
 	background-attachment: fixed;
 }
 
-
 section {
 	display: flex;
 	flex-direction: column;
@@ -33,7 +32,7 @@ section {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 20px;
+	gap: 15px;
 }
 
 /* Luces base */
@@ -59,4 +58,47 @@ section {
 .green-light {
 	background: radial-gradient(circle at 30% 30%, #4cff4c, #00b000) !important;
 	box-shadow: 0 0 20px 5px rgba(0, 255, 0, 0.5) !important;
+}
+
+.random-button {
+	font-size: 1.4em;
+	font-family: monospace;
+	padding: 0.6em 0.8em;
+	border-radius: 0.5em;
+	border: none;
+	background-color: #000;
+	color: #f441a5;
+	cursor: pointer;
+	box-shadow: 2px 2px 3px #000000b4;
+}
+
+.button-div {
+	position: fixed;
+	padding: 3px;
+	background: linear-gradient(90deg, #03a9f4, #f441a5);
+	border-radius: 0.9em;
+	transition: all 0.4s ease;
+	margin: 2rem;
+	right: 25rem;
+	top: 10rem;
+}
+
+.button-div::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	margin: auto;
+	border-radius: 0.9em;
+	z-index: -10;
+	filter: blur(0);
+	transition: filter 0.4s ease;
+}
+
+.button-div:hover::before {
+	background: linear-gradient(90deg, #03a9f4, #f441a5);
+	filter: blur(1.2em);
+}
+
+.button-div:active::before {
+	filter: blur(0.2em);
 }
