--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,8 +10,8 @@ body {
 
 section {
 	display: flex;
-	flex-direction: column;
 	align-items: center;
+	flex-direction: column;
 }
 
 .traffic-light-top {
@@ -41,7 +41,6 @@ section {
 	width: 60px;
 	height: 60px;
 	border-radius: 50%;
-	background: #2e2e2e;
 	box-shadow: inset 0 0 10px #000;
 }
 
@@ -60,7 +59,7 @@ section {
 	box-shadow: 0 0 20px 5px rgba(0, 255, 0, 0.5) !important;
 }
 
-.random-button {
+button {
 	font-size: 1.4em;
 	font-family: monospace;
 	padding: 0.6em 0.8em;
@@ -73,19 +72,16 @@ section {
 }
 
 .button-div {
-	position: fixed;
 	padding: 3px;
 	background: linear-gradient(90deg, #03a9f4, #f441a5);
 	border-radius: 0.9em;
 	transition: all 0.4s ease;
-	margin: 2rem;
-	right: 25rem;
-	top: 10rem;
+	width: 19.5rem;
+	margin-top: 10px;
 }
 
 .button-div::before {
 	content: "";
-	position: absolute;
 	inset: 0;
 	margin: auto;
 	border-radius: 0.9em;
